--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,1 @@
-{
-    "version": 2,
-    "name": "music-album",
-    "builds": [
-       { "src": "main.js", "use": "@vercel/node" }
-    ],
-    "routes": [
-       { "src": "/(.*)", "dest": "/main.js" }
-    ]
- }
+{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/api" }] }
