--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "backend-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "api/index.js",
   "engines": {
     "node": ">=16.0.0"
   },
