--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": ">=16.0.0"
   },
   "scripts": {
-    "dev": "nodemon main.js"
+    "dev": "node main.js"
   },
   "author": "",
   "license": "ISC",
