--- a/.env
+++ b/.env
@@ -1,5 +1,2 @@
-SECRET_KEY = 'somesecretekey'
-JWT_EXPIRES_IN = '1h'
-
-REFRESH_JWT_EXPIRES_IN='1d'
-REFRESH_SECRET_KEY = 'somesecretekey'
+API_URL = /api/v1 
+secret = <your-string>
