--- a/package.json
+++ b/package.json
@@ -1,31 +1,36 @@
 {
-  "name": "backend-server",
+  "name": "nodejs-ecommerce-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "engines": {
-    "node": ">=16.0.0"
-  },
+  "main": "app.js",
   "scripts": {
-    "start": "node main.js"
+    "start": "node app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ashikReza/E-Commerce-api"
+  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.1",
-    "eslint-config-prettier": "^9.1.0",
-    "express": "^4.18.2",
-    "json-server": "^0.17.4",
-    "json-server-auth": "^2.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.0.3",
-    "prettier": "^3.2.5"
+  "bugs": {
+    "url": "https://github.com/ashikReza/E-Commerce-api/issues"
   },
+  "homepage": "https://github.com/ashikReza/E-Commerce-api#readme",
   "devDependencies": {
-    "eslint": "^7.32.0",
-    "eslint-plugin-node": "^11.1.0"
+    "nodemon": "^2.0.7"
+  },
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.11.16",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2"
   }
 }
